--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gitignore": "^0.7.0",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
