--- a/.gitignore
+++ b/.gitignore
@@ -231,5 +231,7 @@ $RECYCLE.BIN/
 *.lnk
 
 *.env.production
+*.env.development
+*.env.test
 
 # End of https://www.toptal.com/developers/gitignore/api/node,vite,vue,macos,windows,linux,vscode
